# core

./: .gitignore  Cargo.toml  README.md  SASCM.INI
.cargo/: config  config.toml
.github/workflows/: rust.yml
src/: common_ffi.rs  dictionary_num_by_str.rs  dictionary_str_by_num.rs  dictionary_str_by_str.rs  ffi.rs  lib.rs
src/ast/: mod.rs
src/dictionary/: config.rs  dictionary_num_by_str.rs  dictionary_str_by_num.rs  dictionary_str_by_str.rs  dictionary_two_way.rs  ffi.rs  list_num_by_str.rs  mod.rs
src/dictionary/test/: keywords-hex.txt
src/gxt/: Cargo.toml  ffi.rs  mod.rs  parser.rs
src/gxt/src/: lib.rs  main.rs
src/gxt/tests/: integration_tests.rs
src/ide/: ffi.rs  mod.rs  model_list.rs
src/language_service/: ffi.rs  mod.rs  scanner.rs  server.rs  symbol_table.rs  watcher.rs
src/legacy_ini/: ffi.rs  mod.rs  table.rs
src/math/: mod.rs
src/modes/: Cargo.toml  ffi.rs  mod.rs  mode.rs  modes.rs  string_variables.rs
src/modes/src/: main.rs  modes.rs
src/modes/test_cases/: test_circular_a.xml  test_circular_d.xml
src/namespaces/: classes_parser.rs  enum_parser.rs  error.rs  ffi.rs  info.md  library.rs  mod.rs  namespaces.rs  parser.rs  snippet.rs
src/namespaces/test/: classes_deprecated.db  classes_empty.db  classes_enum_hole.db  classes_find.db  classes_invalid.db  classes_many.db  classes_no_classes.db  classes_one_class.db  classes_one_ignore_class.db  classes_only_classes.db  classes_prop.db  classes_prop2.db  classes_prop_hint.db  enums_1.txt  enums_2.txt
src/opcodes/: opcodes.rs  opcodes1.rs
src/parser/: binary.rs  declaration.rs  expression.rs  helpers.rs  interface.rs  literal.rs  mod.rs  operator.rs  statement.rs  string.rs  unary.rs  variable.rs  whitespace.rs
src/preprocessor/: ffi.rs  line_parser.rs  mod.rs  scopes.rs
src/preprocessor/test/: 0.txt  addon.txt  circular1.txt  hex_inc.txt  scr_ffi.txt  scr_with_func.txt  script.txt  script_with_include.txt  u.txt
src/sanny_update/: ffi.rs  http_client.rs  mod.rs
src/sdk/: messages.rs  mod.rs
src/source_map/: ffi.rs  mod.rs  source_map.rs
src/test/: keywords-dups.txt  keywords.txt
src/update_service/: ffi.rs  http_client.rs  mod.rs  service.rs
src/utils/: compiler_const.rs  ffi.rs  mod.rs  path.rs  version.rs  visibility_zone.rs
src/v4/: bitwise.rs  ffi.rs  game.rs  helpers.rs  mod.rs  transform.rs
test_cases/: test_base.xml  test_child.xml  test_circular_b.xml  test_circular_c.xml  test_circular_e.xml  test_grandchild.xml
