[package]
name = "sanny_builder_core"
version = "0.3.1"
authors = ["Seemann <mail@sannybuilder.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2.79"
nom = "7.1.3"
nom_locate = "4.1.0"
hotwatch = "0.4.6"
lazy_static = "1.4.0"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "0.11.2"
lexical-core = "0.8.5"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
ureq = {version = "2.5.0", features = ["json"] }
base64 = "0.13.0"
version-compare = "0.1.0"
winapi = { version = "0.3", features = ["winver", "winuser"] }
ctor = "0.1.20"
libloading = "0.7.0"
version_info = "0.0.5"